# dso_ros_run

./: CMakeLists.txt  README.md  result.txt  run.sh  run_ros.sh
cmake/: FindCeres.cmake  FindEigen.cmake  FindOpencv.cmake  FindPangolin.cmake  log4cpp.cmake
config/cg/: camera.txt
config/euroc/: camera.txt
src/: main.cpp
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp
src/util/: Undistort.cpp
